Archive2/ed/b50c3d8f006083/output
main.cpp:10:36: error: no member named 'put_time' in namespace 'std'
    std::cout << "ru_RU: " << std::put_time(&tm, "%c %Z") << '\n';
                              ~~~~~^
main.cpp:12:36: error: no member named 'put_time' in namespace 'std'
    std::cout << "ja_JP: " << std::put_time(&tm, "%c %Z") << '\n';
                              ~~~~~^
2 errors generated.
